# Djanjo-Project

./: README.md  main.py  pyproject.toml
about/: views.py
accounts/: views.py
config/: settings.py  urls.py
templates/: about_cv.html  index.html  login.html  logout.html  register.html
travello/: models.py  views.py
travello/migrations/: 0001_initial.py
